objects/Integration_Log__c.object
<CustomObject>
    <description>As there are Integrations with the external systems in the application,  this object will be used to track the integration requests and response records 

3 record types for this object are created 

1. Integration Request: Log the Request structure and status 
2. Integration Response: Log the Response structure and status
3. Exception Logging : Log the exception details - in case of exception</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Used to track the complete exception string</description>
        <label>Detailed Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>Used to track the type of the exception</description>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Point__c</fullName>
        <label>Integration Point</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Point__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Class_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Logs</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Integration_Point__c</columns>
        <columns>Method_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todays_Logs</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Integration_Point__c</columns>
        <columns>Method_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <recordTypes>
        <fullName>Exception_Log</fullName>
        <active>true</active>
        <description>To Log all the exceptions that arise during application development</description>
        <label>Exception Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integration_Request</fullName>
        <active>true</active>
        <description>To store all the system logs when Integration requests are made</description>
        <label>Integration Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integration_Response</fullName>
        <active>true</active>
        <description>To store the system logs of all the integration responses received</description>
        <label>Integration Response</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>